SERVER-62146 [SBE] Fix use-after-free bug with $arrayElemAt, $first, and $last

(cherry picked from commit 168086cae37581eeaa7513bfa3976cf554ffc79a)